# pngd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: format.md
src/pngd/: __init__.py  _format.py  core.py  pil_plugin.py
tests/: test_pngd.py
