[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pngd"
version = "0.1.0"
description = "Byte-split depth PNG: lossless single-file container for uint16 depth images"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jariullah Safi" }]
keywords = ["depth", "png", "realsense", "image", "uint16", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
    "Pillow>=9.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Documentation = "https://github.com/safijari/pngd/blob/main/docs/format.md"
Source = "https://github.com/safijari/pngd"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pngd = ["py.typed"]
